--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.5.3",
     "pug": "^2.0.3",
+    "puppeteer": "^1.15.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.4"
   }
