--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.16.4",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.3",
+    "nodemailer": "^6.1.1",
     "pug": "^2.0.3",
     "puppeteer": "^1.15.0",
     "request": "^2.88.0",
