--- a/package.json
+++ b/package.json
@@ -12,13 +12,18 @@
   "dependencies": {
     "bower": "^1.8.8",
     "cheerio": "^1.0.0-rc.2",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.4",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.16.1",
+    "express-validator": "^5.3.1",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.3",
     "nodemailer": "^6.1.1",
     "pug": "^2.0.3",
     "puppeteer": "^1.15.0",
     "request": "^2.88.0",
-    "request-promise": "^4.2.4"
+    "request-promise": "^4.2.4",
+    "validator": "^10.11.0"
   }
 }
